Fixed a spacing oopsie

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,8 +34,8 @@ html.dark {
 
 
 body {
-    margin-top: 1rem;
-    /* margin: 0 auto; */
+    /* margin-top: 10rem; */
+    margin: 0 auto;
     width: 100%;
     max-width: 80ch;
     padding: 1rem;
@@ -242,7 +242,7 @@ img.spec {
 	z-index: 0;
 	padding-left: unset;
 	padding-top: 0px;
-	margin-bottom: unset;
+	margin-bottom: 0rem;
 	margin-top: 0px;
 
 	border-bottom: unset;
